# CCP-TEPP-SS26-testing

./: .gitignore  CMakeLists.txt  pixi.toml  test_divide.cpp
src/: CMakeLists.txt  histogram.cpp  histogram.hpp  invariant_mass.cpp  invariant_mass.hpp  process_candidates.cpp
test/: CMakeLists.txt  test_histogram.cpp  test_invariant_mass.cpp
